# polynomial_library

./: CMakeLists.txt  README.md
include/: MultivariatePolynomial.hpp  Polynomial.hpp  SquareMatrix.hpp
src/: MultivariatePolynomial.cpp  Polynomial.cpp  SquareMatrix.cpp
tests/: test_main.cpp
